--- a/docs/A11Y.md
+++ b/docs/A11Y.md
@@ -2,10 +2,10 @@
 
 ### 모바일
 
-- [ ] "대한민국 원"으로 알려주지 않고 "KRW"로 알려줌
+- [x] "대한민국 원"으로 알려주지 않고 "KRW"로 알려줌
 - [ ] 아이폰 사파리에서 이미지, 글씨를 각각 따로 읽음
-- [ ] 서울/인천, 치앙마이를 나누어서 읽어주고 있음
-- [ ] 물결기호도 따로 잡아주고 있음
-- [ ] 목록이 끝났음을 알려주지 않음
-- [ ] aria-disabled가 크롬 모바일에서 제대로 동작하지 않음
+- [x] 서울/인천, 치앙마이를 나누어서 읽어주고 있음
+- [x] 물결기호도 따로 잡아주고 있음
+- [x] 목록이 끝났음을 알려주지 않음
+- [x] aria-disabled가 크롬 모바일에서 제대로 동작하지 않음
 - [ ] "목록 8개 항목 포함"을 읽어 주지 않음
